--- a/views/admin_buku.ejs
+++ b/views/admin_buku.ejs
@@ -30,3 +30,97 @@
         </div>
     </body>
 </html>
+<style>
+    body{
+        margin: 0;
+        padding: 0;
+        font-family: Arial;
+        color : #A8B5BF;
+        background-image: linear-gradient(50deg, #05080D ,#141A26, #516073);
+        height: 100vh;
+        overflow: hidden;
+    }
+    body h1{
+        position: relative;
+        text-align: center;
+        font-size: 40px;
+        color: #05080D;
+        font-family: cursive;
+        margin: 5px;
+    }
+
+    .container{
+        position: absolute;
+        width: 500px;
+        height: 800px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-height: 100vh;
+        padding: 15px;
+        border-radius: 25px;
+        box-sizing: border-box;
+        overflow: hidden;
+        overflow-y: scroll;
+    }
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .container::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .container {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+
+    a:link, a:visited {
+        background-color: #05080D;
+        color: #A8B5BF;
+        padding: 12px 20px;
+        margin-left: 8px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        border-radius: 10px;
+    }
+
+    a:hover, a:active {
+        background-color: #141A26;
+    }
+
+    .content-table{
+        border-collapse: collapse;
+        margin: 25px 0;
+        font-size: 0.9em;
+        min-width: 400px;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+
+    .content-table thead tr{
+        background: #141A26;
+        text-align: left;
+        font-weight: bold;
+        font-size: 17px;
+    }
+
+    .content-table th,
+    .content-table td{
+        padding: 12px 15px;
+    }
+
+    .content-table tbody tr {
+        border-bottom: 1px solid white;
+    }
+
+    .content-table tbody tr:nth-of-type(even){
+        background-color: #2e3a4b;
+    }
+
+    .content-table tbody tr:last-of-type{
+        border-bottom: 2px solid #141A26;
+    }
+</style>
