--- a/views/admin_edit_buku.ejs
+++ b/views/admin_edit_buku.ejs
@@ -19,3 +19,60 @@
         </form>
     </body>
 </html>
+<style>
+    body{
+        margin: 0;
+        padding: 0;
+        font-family: Arial;
+        color : #A8B5BF;
+        background-image: linear-gradient(120deg, #05080D ,#141A26, #516073);
+        height: 100vh;
+        overflow: hidden;
+    }
+    
+    body h1{
+        position: relative;
+        text-align: center;
+        font-size: 40px;
+        color: #05080D;
+        font-family: cursive;
+        margin: 5px;
+    }
+
+    form{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(81, 96, 115, 0.6);
+        padding: 15px;
+        border-radius: 25px;
+    }
+
+    .btn{
+        background-color: #141A26;
+        border-radius: 20px;
+        color: #A8B5BF;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 25px;
+        margin: 6px 10px;
+        cursor: pointer;
+    }
+
+    div{
+        font-size: 25px;
+        text-align: center;
+        padding: 10px;
+    }
+
+    input{
+        width: 300px;
+        height: 50px;
+        text-align: center;
+        border-radius: 22px;
+        font-size: 20px;
+    }
+    
+</style>
